{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 125,
  "lineage": "8ac387fe-83e4-b676-310a-0add9fe2ea3f",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:913524928876:loadbalancer/app/cloudnova-alb/324212e0ce84e37f",
            "arn_suffix": "app/cloudnova-alb/324212e0ce84e37f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloudnova-alb-1681081862.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:913524928876:loadbalancer/app/cloudnova-alb/324212e0ce84e37f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloudnova-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b8baa12169372a97"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028c670c496677d94"
              },
              {
                "subnet_id": "subnet-0703304969200b72a"
              }
            ],
            "subnets": [
              "subnet-028c670c496677d94",
              "subnet-0703304969200b72a"
            ],
            "tags": {
              "Name": "cloudnova-alb"
            },
            "tags_all": {
              "Name": "cloudnova-alb"
            },
            "vpc_id": "vpc-0b64324baeab846e4",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:913524928876:listener/app/cloudnova-alb/324212e0ce84e37f/f24badadc3394193",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:913524928876:targetgroup/cloudnova-tg/81fb0765f237c980",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:913524928876:listener/app/cloudnova-alb/324212e0ce84e37f/f24badadc3394193",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:913524928876:loadbalancer/app/cloudnova-alb/324212e0ce84e37f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:913524928876:targetgroup/cloudnova-tg/81fb0765f237c980",
            "arn_suffix": "targetgroup/cloudnova-tg/81fb0765f237c980",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:913524928876:targetgroup/cloudnova-tg/81fb0765f237c980",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:913524928876:loadbalancer/app/cloudnova-alb/324212e0ce84e37f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloudnova-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cloudnova-tg"
            },
            "tags_all": {
              "Name": "cloudnova-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b64324baeab846e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:913524928876:security-group/sg-0b8baa12169372a97",
            "description": "Security Group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8baa12169372a97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudnova-alb-sg",
            "name_prefix": "",
            "owner_id": "913524928876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudnova-alb-sg"
            },
            "tags_all": {
              "Name": "cloudnova-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b64324baeab846e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:913524928876:security-group/sg-00462058819ae6c36",
            "description": "Security Group for ECS Service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00462058819ae6c36",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b8baa12169372a97"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "cloudnova-ecs-sg",
            "name_prefix": "",
            "owner_id": "913524928876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudnova-ecs-sg"
            },
            "tags_all": {
              "Name": "cloudnova-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b64324baeab846e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:913524928876:security-group/sg-0b83fa35d16b75761",
            "description": "Security Group for RDS Cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b83fa35d16b75761",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00462058819ae6c36"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cloudnova-rds-sg",
            "name_prefix": "",
            "owner_id": "913524928876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudnova-rds-sg"
            },
            "tags_all": {
              "Name": "cloudnova-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b64324baeab846e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ecs_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01919891389f5fba0",
            "arn": "arn:aws:ec2:ap-south-1:913524928876:elastic-ip/eipalloc-01919891389f5fba0",
            "association_id": "eipassoc-0f5e10bf46d4d3cde",
            "domain": "vpc",
            "id": "eipalloc-01919891389f5fba0",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-01a034f8178565b33",
            "private_dns": "ip-10-0-1-23.ap-south-1.compute.internal",
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-3-7-237-134.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.237.134",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:913524928876:internet-gateway/igw-09212ed699970999d",
            "id": "igw-09212ed699970999d",
            "owner_id": "913524928876",
            "tags": {
              "Name": "cloudnova-igw"
            },
            "tags_all": {
              "Name": "cloudnova-igw"
            },
            "vpc_id": "vpc-0b64324baeab846e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01919891389f5fba0",
            "association_id": "eipassoc-0f5e10bf46d4d3cde",
            "connectivity_type": "public",
            "id": "nat-029a4abe9ffd7b44b",
            "network_interface_id": "eni-01a034f8178565b33",
            "private_ip": "10.0.1.23",
            "public_ip": "3.7.237.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0703304969200b72a",
            "tags": {
              "Name": "cloudnova-nat-gateway"
            },
            "tags_all": {
              "Name": "cloudnova-nat-gateway"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:913524928876:route-table/rtb-0238fc23ee90e442d",
            "id": "rtb-0238fc23ee90e442d",
            "owner_id": "913524928876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-029a4abe9ffd7b44b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudnova-private-rt"
            },
            "tags_all": {
              "Name": "cloudnova-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b64324baeab846e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:913524928876:route-table/rtb-0efdc9091539a4fa3",
            "id": "rtb-0efdc9091539a4fa3",
            "owner_id": "913524928876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09212ed699970999d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudnova-public-rt"
            },
            "tags_all": {
              "Name": "cloudnova-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b64324baeab846e4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6f1ec1d37698449",
            "route_table_id": "rtb-0238fc23ee90e442d",
            "subnet_id": "subnet-06a160b1b464b1faa"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079dda0e61103d614",
            "route_table_id": "rtb-0238fc23ee90e442d",
            "subnet_id": "subnet-08820251c2890d087"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_subnet_2",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dbdd84182678412",
            "route_table_id": "rtb-0efdc9091539a4fa3",
            "subnet_id": "subnet-0703304969200b72a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0520cec92c151bb8d",
            "route_table_id": "rtb-0efdc9091539a4fa3",
            "subnet_id": "subnet-028c670c496677d94"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:913524928876:subnet/subnet-06a160b1b464b1faa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a160b1b464b1faa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913524928876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudnova-private-subnet-1"
            },
            "tags_all": {
              "Name": "cloudnova-private-subnet-1"
            },
            "vpc_id": "vpc-0b64324baeab846e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:913524928876:subnet/subnet-08820251c2890d087",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08820251c2890d087",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "913524928876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudnova-private-subnet-2"
            },
            "tags_all": {
              "Name": "cloudnova-private-subnet-2"
            },
            "vpc_id": "vpc-0b64324baeab846e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:913524928876:subnet/subnet-0703304969200b72a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0703304969200b72a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "913524928876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudnova-public-subnet-1"
            },
            "tags_all": {
              "Name": "cloudnova-public-subnet-1"
            },
            "vpc_id": "vpc-0b64324baeab846e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:913524928876:subnet/subnet-028c670c496677d94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028c670c496677d94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "913524928876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudnova-public-subnet-2"
            },
            "tags_all": {
              "Name": "cloudnova-public-subnet-2"
            },
            "vpc_id": "vpc-0b64324baeab846e4"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:913524928876:vpc/vpc-0b64324baeab846e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0247cc6d4cdbe1cea",
            "default_route_table_id": "rtb-031bb4622bc8acbd7",
            "default_security_group_id": "sg-0b5b7f7165cc7f170",
            "dhcp_options_id": "dopt-060de14944a67e22c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b64324baeab846e4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-031bb4622bc8acbd7",
            "owner_id": "913524928876",
            "tags": {
              "Name": "cloudnova-vpc"
            },
            "tags_all": {
              "Name": "cloudnova-vpc"
            }
          }
        }
      ]
    }
  ]
}